k8s/base/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: pj-formations
  labels:
    namespace: pj-formations
