k8s/base/deployment.yaml
---
kind: Deployment
apiVersion: apps/v1
metadata:
  name: pj-formations
spec:
  selector:
    matchLabels:
      app: pj-formations
  template:
    metadata:
      labels:
        app: pj-formations
    spec:
      containers:
        - name: pj-formations
          image: shokohsc/pj-formations
          ports:
            - name: http
              containerPort: 80
              protocol: TCP
          startupProbe:
            tcpSocket:
              port: http
          livenessProbe:
            tcpSocket:
              port: http
          readinessProbe:
            httpGet:
              port: http
              path: /
          resources:
            requests:
              cpu: 10m
              memory: 64M
            limits:
              cpu: 100m
              memory: 64M
