k8s/base/service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: pj-recrutement-et-conseil
  labels:
    app: pj-recrutement-et-conseil
spec:
  type: ClusterIP
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: pj-recrutement-et-conseil
