k8s/base/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: pj-formations
spec:
  rules:
  - host: pj-formations.cluster.local
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: pj-formations
            port:
              number: 80
